[package]
name = "gitignore-downloader"
version = "0.1.0"
authors = ["abnerfs <abnerfs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.6", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = "1.0.114"
serde_json = "1.0.56"
serde_derive = "1.0.114"